--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.3.1
+annotated-types==0.7.0
 anyio==4.8.0
 arrow==1.3.0
 asgiref==3.8.1
@@ -27,6 +28,7 @@ cookiecutter==2.6.0
 cron-descriptor==1.4.5
 cryptography==44.0.0
 daphne==4.1.2
+distro==1.9.0
 Django==5.1.5
 django-allauth==65.3.1
 django-anymail==12.0
@@ -46,12 +48,15 @@ drf-spectacular==0.28.0
 fido2==1.2.0
 gunicorn==23.0.0
 h11==0.14.0
+httpcore==1.0.7
 httptools==0.6.4
+httpx==0.28.1
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 inflection==0.5.1
 Jinja2==3.1.5
+jiter==0.8.2
 jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -61,17 +66,23 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 msgpack==1.1.0
 oauthlib==3.2.2
+openai==1.61.0
 packaging==24.2
+pdf2image==1.17.0
 pegasus-cli==0.7
+pillow==11.1.0
 pip-tools==7.4.1
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.19.1
 PyJWT==2.10.1
 pyOpenSSL==25.0.0
+PyPDF2==3.0.1
 pyproject_hooks==1.2.0
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
@@ -91,6 +102,7 @@ six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
 text-unidecode==1.3
+tqdm==4.67.1
 Twisted==24.11.0
 txaio==23.1.1
 types-python-dateutil==2.9.0.20241206
